--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-transformers==4.42.0
-sentence-transformers==2.7.0
-faiss-cpu==1.8.0
-fastapi==0.111.0
-uvicorn[standard]==0.30.1
-torch==2.3.1
-accelerate==0.30.1
-pydantic==2.7.4
-numpy==1.26.4
+transformers
+sentence-transformers
+faiss-cpu
+fastapi
+uvicorn[standard]
+torch # Let pip find a compatible CPU version for Linux
+accelerate
+pydantic
+numpy
