Fix Dockerfile comment error and push latest 4-bit quantization changes for Render

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ sentence-transformers
 faiss-cpu
 fastapi
 uvicorn[standard]
+torch
 accelerate
-bitsandbytes==0.43.1
 pydantic
 numpy
+bitsandbytes==0.43.1 # ADD THIS LINE
